ubuntu/22.04/openjdk-11-jre-headless/11.0.15_10-0ubuntu0.22.04.1/4a06418e-542c-4943-b1b3-8d8269c2e920/_usr_lib_jvm_java-11-openjdk-amd64_bin_jjs.strace.stderr
Warning: The jjs tool is planned to be removed from a future JDK release
ECMAScript Exception: SyntaxError: <shell>:1:8 Unsupported RegExp flag: l
/usr/lib/jvm/java-11-openjdk-amd64/bin/java
        ^
ECMAScript Exception: SyntaxError: <shell>:1:8 Unsupported RegExp flag: l
/usr/lib/jvm/java-11-openjdk-amd64/bin/jjs
        ^
ECMAScript Exception: SyntaxError: <shell>:1:8 Unsupported RegExp flag: l
/usr/lib/jvm/java-11-openjdk-amd64/bin/keytool
        ^
ECMAScript Exception: SyntaxError: <shell>:1:8 Unsupported RegExp flag: l
/usr/lib/jvm/java-11-openjdk-amd64/bin/pack200
        ^
ECMAScript Exception: SyntaxError: <shell>:1:8 Unsupported RegExp flag: l
/usr/lib/jvm/java-11-openjdk-amd64/bin/rmid
        ^
ECMAScript Exception: SyntaxError: <shell>:1:8 Unsupported RegExp flag: l
/usr/lib/jvm/java-11-openjdk-amd64/bin/rmiregistry
        ^
ECMAScript Exception: SyntaxError: <shell>:1:8 Unsupported RegExp flag: l
/usr/lib/jvm/java-11-openjdk-amd64/bin/unpack200
        ^
ECMAScript Exception: SyntaxError: <shell>:1:8 Unsupported RegExp flag: l
/usr/lib/jvm/java-11-openjdk-amd64/lib/jexec
        ^
ECMAScript Exception: SyntaxError: <shell>:1:8 Unsupported RegExp flag: l
/usr/lib/jvm/java-11-openjdk-amd64/lib/jspawnhelper
        ^
jdk.internal.org.jline.reader.EndOfFileException
